Correct error in displaying article text
Articles with no table of contents have a layout issue.

--- a/src/components/Toc/style.scss
+++ b/src/components/Toc/style.scss
@@ -19,6 +19,14 @@
   border-bottom: 1px solid rgba(0,0,0,.125);
 }
 
+.visible {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
 ul {
   margin-bottom: 0 !important;
 }
